# cellsim

./: .gitignore  CMakeLists.txt  Makefile  build.cmake  cellsim.c  locale.cmake  readme.md
cellsim/: cellsim.c  cellsim.h  debug.h  graphics.h
